Signout callback, random fix, mobile fix, dark mode fix

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -12,9 +12,9 @@
     --medium-purple: #885ab6;
     --light-white: #ffffff;
     --aquamarine: #3eced9;
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
 
     /*Gradiente*/
     --gradient: linear-gradient(180deg, #adf651 0%, #3eced9 47.92%, #885ab6 100%);
@@ -24,14 +24,6 @@
 @font-face {
     font-family: 'FasterStroker';
     src: url('/fonts/FasterStroker.otf') format('opentype');
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
 }
 
 body {
